add logging to dev